--- a/css/style_j.css
+++ b/css/style_j.css
@@ -89,7 +89,7 @@
     color:black;
     margin: auto;
     font-size: .3rem;
-    padding: .35rem 10%;
+    padding: 0.1rem 5%;
     overflow: hidden;
     white-space: nowrap;
     z-index: 9999;
